# ethereum-types

./: README.md  mypy.ini  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: gh-pages.yaml  test.yaml
src/ethereum_types/: __init__.py  bytes.py  enum.py  frozen.py  numeric.py  numeric.pyi
tests/: test_base_types.py  test_bytes.py  test_enum.py  test_frozen.py  test_numeric.py
