[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79

[tool.black]
line-length = 79

[tool.pytest.ini_options]
markers = [
    "fixed: exactly-sized integers like U256, U64, etc.",
    "arbitrary: arbitrarily large numbers like Uint",
    "unsigned: numbers greater than or equal to zero",
]

[tool.docc.plugins."docc.python.discover"]
paths = [
    "src",
]
