[metadata]
name = ethereum-types
description = Types used by the Ethereum Specification.
long_description = file: README.md
long_description_content_type = text/markdown
version = attr: ethereum_types.__version__
url = https://github.com/ethereum/ethereum-types
license_files =
    LICENSE.md
classifiers =
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication

[options]
package_dir=
    =src
packages=find:

install_requires =
    typing-extensions>=4.12.2

[options.packages.find]
where=src

python_requires = >=3.10

[options.package_data]
ethereum_types =
    py.typed

[options.extras_require]
test =
    pytest>=8.2.2,<9
    pytest-cov>=5,<6
    pytest-xdist>=3.6.1,<4

lint =
    types-setuptools>=70.3.0.1,<71
    isort==5.13.2
    mypy==1.10.1
    black==24.4.2
    flake8==7.1.0
    flake8-bugbear==24.4.26
    flake8-docstrings==1.7.0

doc =
    docc>=0.2.0,<0.3.0

[flake8]
dictionaries=en_US,python,technical
docstring-convention = all
extend-ignore =
    E203
    D105
    D107
    D200
    D203
    D205
    D212
    D400
    D401
    D410
    D411
    D412
    D413
    D414
    D415
    D416

extend-exclude =
    setup.py
    doc/

per-file-ignores =
    tests/*:D100,D101,D103,D104,E501

# vim: set ft=dosini:
